--- a/os_linux.md.html
+++ b/os_linux.md.html
@@ -105,6 +105,22 @@ Linux
 | apt remove pkg        | remove package                  |
 | apt purge pkg         | remove package and its settings |
 
+<meta name="keywords" content="*memo:os.linux.docker*">
+## docker
+
+| Commands      | Management Commands       |
+| ---           | ---                       |
+| docker pull   | docker image pull         |
+| docker images | docker image ls           |
+| docker rmi    | docker image rm           |
+| docker ps     | docker container ls       |
+| docker ps -a  | docker container ls --all |
+| docker rm     | docker container rm       |
+| docker commit | docker container commit   |
+| docker run    | docker container run      |
+| docker start  | docker container start    |
+| docker stop   | docker container stop     |
+
 <meta name="keywords" content="*memo:os.linux.flatpak*">
 ## flatpak
 
