--- a/my.md.html
+++ b/my.md.html
@@ -5,45 +5,45 @@
 Ahk
 =======================================================
 
-| --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| :-------:  | :-------:  | :-------:  | :-------:  | :-------:  | :-------:  | :-------:  | :-------:  | :-------:  | :-------:  | :-------:  | :-------:  |
-| Q          | W          | E          | R          | T          |            |            | Y          | U          | I          | O          | P          |
-| A          | S          | D          | F          | G          |            |            | H          | J          | K          | L          | :;         |
-| Z          | X          | C          | V          | B          |            |            | N          | M          | <,         | >.         | ?/         |
-| Tab        | Win        | Alt        | Zen        | Ctrl       | Esc        | Shift      | Space      |            |            |            | Enter      |
-| --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| win_next   | win_prev   | End        | app_prev   | app_next   |            |            | tab_prev   | tab_next   | tab_new    | tab_del    | PgUp       |
-| Hom        | BS         | Del        | Right      | F5         |            |            | Left       | Down       | Up         | Right      | PgDn       |
-|            |            | copy       | paste      | Left       |            |            | PgDn       |            |            |            |            |
-|            |            |            |            |            |            |            | [Space]    |            |            |            |            |
-| --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-|            |            |            | !          | @          |            |            | ^          | '$'        | (          | )          | ~          |
-| [a]        |            |            | `          |            |            |            | '          | "          | {          | }          | Bar        |
-|            |            |            | #          | %          |            |            | &          | _          | [          | ]          | \          |
-| --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-| W-Left     | W-Up       | W-Right    | reload_ahk | toggle_win |            |            |            |            |            |            |            |
-|            | W-s        | W-d        | W-g        |            |            |            | C-h        | C-j        | C-k        | C-l        | [;]        |
-|            |            |            |            |            |            |            |            |            |            |            |            |
-| --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-|            | 7          | 8          | 9          |            |            |            | +          | /          | (          | )          | BS         |
-|            | 4          | 5          | 6          |            |            |            | -          | *          | {          | }          | f          |
-| [z]        | 1          | 2          | 3          | 0          |            |            | =          |            | ,          | .          | l          |
-| --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
-|            | F7         | F8         | F9         | F12        |            |            |            |            |            |            |            |
-|            | F4         | F5         | F6         | F11        |            |            |            |            |            |            |            |
-|            | F1         | F2         | F3         | F10        |            |            |            |            |            |            | [/]        |
-| xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx |
-
-|          | Key     |
-| ---      | ---     |
-| win_prev | S-A-Tab |
-| win_next | A-Tab   |
-| app_prev | S-C-Tab |
-| app_next | C-Tab   |
-| tab_prev | C-Home  |
-| tab_next | C-End   |
-| tab_new  | C-PgUp  |
-| tab_del  | C-PgDn  |
+| Normal     | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
+| :--------- | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: |
+|            | Q          | W          | E          | R          | T          |            |            | Y          | U          | I          | O          | P          |
+|            | A          | S          | D          | F          | G          |            |            | H          | J          | K          | L          | :;         |
+|            | Z          | X          | C          | V          | B          |            |            | N          | M          | <,         | >.         | ?/         |
+|            | Tab        | Win        | Alt        | Zen        | Ctrl       | Esc        | Shift      | Space      |            |            |            | Enter      |
+| Ctrl       | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
+|            |            |            |            |            |            |            |            |            |            |            |            |            |
+|            |            |            |            |            |            |            |            |            |            |            |            |            |
+|            |            |            |            |            |            |            |            |            |            |            |            |            |
+| Space      | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
+|            | win_next   | win_prev   |            | app_prev   | app_next   |            |            | C-Home     | C-End      | C-PgUp     | C-PgDn     | PgUp       |
+|            |            |            |            |            | F5         |            |            | PgUp       | C-n        | C-p        | PgDn       | PgDn       |
+|            |            |            | copy       | paste      |            |            |            | Down       | Up         |            |            |            |
+| Unused     | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
+|            | [q]        |            |            |            |            |            |            |            |            |            |            |            |
+|            |            |            |            |            |            |            |            |            |            |            |            |            |
+|            |            |            |            |            |            |            |            |            |            |            |            |            |
+| Special    | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
+|            |            |            |            | !          | @          |            |            | ^          | '$'        | (          | )          | ~          |
+|            | [a]        |            |            | `          |            |            |            | '          | "          | {          | }          | Bar        |
+|            |            |            |            | #          | %          |            |            | &          | _          | [          | ]          | \          |
+| Number     | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
+|            |            | 7          | 8          | 9          |            |            |            | +          | /          | (          | )          | BS         |
+|            |            | 4          | 5          | 6          |            |            |            | -          | *          | {          | }          | f          |
+|            | [z]        | 1          | 2          | 3          | 0          |            |            | =          |            | ,          | .          | l          |
+| Windows    | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
+|            |            |            |            | reload_ahk |            |            |            | W-Left     | W-Up       | W-Right    | toggle_win | [p]        |
+|            |            | W-s        | W-d        |            | W-g        |            |            |            |            |            |            |            |
+|            |            |            |            |            |            |            |            |            |            |            |            |            |
+| Edit       | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
+|            | Esc        | Tab        |            |            |            |            |            | Home       | End        | PgUp       | PgDn       |            |
+|            | Home       | BS         | Left       | Right      | End        |            |            | Left       | Down       | Up         | Right      | [;]        |
+|            | Ins        | Del        | Zen        |            |            |            |            |            |            |            |            |            |
+| Func       | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  |            |            | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  |
+|            |            | F7         | F8         | F9         | F12        |            |            |            |            |            |            |            |
+|            |            | F4         | F5         | F6         | F11        |            |            |            |            |            |            |            |
+|            |            | F1         | F2         | F3         | F10        |            |            |            |            |            |            | [/]        |
+| xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx | xxxxxxxxxx |
 
 <textarea id="typing_area" name="typing_area" rows="10" cols="80">
 This is a typing area.
@@ -151,47 +151,50 @@ Keymap
 | bash    |                   | ,,                 | pushd                       |
 | bash    |                   | ,-                 | popd                        |
 
-## Move
+## Shortcuts
 
-|                       | Key     | Normal | Terminal | Fzf               | App              |
-| ---                   | ---     | ---    | ---      | ---               | ---              |
-| win app next          | A-Tab   |        |          |                   | Space-Esc, C-Esc |
-| win app prev          | S-A-Tab |        |          |                   | Space-1  , C-1   |
-| app tab prev          | S-C-Tab |        |          |                   | Space-4  , C-4   |
-| app tab next          | C-Tab   |        |          |                   | Space-5  , C-5   |
-| vim tab prev          | C-Home  |        |          |                   | Space-6  , C-6   |
-| vim tab next          | C-End   |        |          |                   | Space-7  , C-7   |
-| vim tab new           | C-PgUp  |        |          |                   | Space-i          |
-| vim tab del           | C-PgDn  |        |          |                   | Space-o          |
-| vim win left          | C-Left  | C-h    |          |                   |                  |
-| vim win down          | C-Down  | C-j    |          |                   |                  |
-| vim win up            | C-Up    | C-k    |          |                   |                  |
-| vim win right         | C-Right | C-l    |          |                   |                  |
-| cursor left           | Left    | h      |          |                   | Space-h          |
-| cursor down           | Down    | j      |          |                   | Space-j          |
-| cursor up             | Up      | k      |          |                   | Space-k          |
-| cursor right          | Right   | l      |          |                   | Space-l          |
-| page down             | PgDn    | C-f    |          |                   | Space-n          |
-| page up               | PgUp    | C-d    |          |                   | Space-p          |
-| scroll down           |         | C-n    |          |                   |                  |
-| scroll up             |         | C-p    |          |                   |                  |
-| readline Home         | Home    |        | C-a      | C-a               | Space-a          |
-| readline End          | End     |        | C-e      | C-e               | Space-e          |
-| readline Left         | Left    |        | C-b      | C-b               | Space-b          |
-| readline Right        | Right   |        | C-f      | C-f               | Space-f          |
-| readline BS           | BS      |        | C-s      | C-s               | Space-s          |
-| readline Del          | Del     |        | C-d      | C-d               | Space-d          |
-| redraw                | F5      | C-g    | C-g      | C-g               | Space-g          |
-| fzf preview-page-up   | Left    |        |          | Space-h           |                  |
-| fzf preview-down      | Down    |        |          | Space-j           |                  |
-| fzf preview-up        | Up      |        |          | Space-k           |                  |
-| fzf preview-page-down | Right   |        |          | Space-l           |                  |
-| fzf down              | PgDn    |        |          | Space-n, C-j, C-n |                  |
-| fzf up                | PgUp    |        |          | Space-p, C-k, C-p |                  |
-| select before cursor  |         |        |          |                   | S-Home           |
-| select after cursor   |         |        |          |                   | S-End            |
-| select all            |         |        |          |                   | S-a              |
-
+|     |                      | Normal       | Terminal     | Fzf      | App     |
+| --- | ---                  | ---          | ---          | ---      | ---     |
+| win | win_prev             |              |              |          | S-A-Tab |
+| win | win_next             |              |              |          | A-Tab   |
+| app | app_prev             |              |              |          | S-C-Tab |
+| app | app_next             |              |              |          | C-Tab   |
+| --- | ---                  | ---          | ---          | ---      | ---     |
+| vim | tab_prev             | C-Home       | C-Home       |          |         |
+| vim | tab_next             | C-End        | C-End        |          |         |
+| vim | tab_new              | C-PgUp       | C-PgUp       |          |         |
+| vim | tab_del              | C-PgDn       | C-PgDn       |          |         |
+| vim | win left             | C-h, C-Left  | C-h, C-Left  |          |         |
+| vim | win right            | C-l, C-Right | C-l, C-Right |          |         |
+| vim | win up               | C-k, C-Up    | C-k, C-Up    |          |         |
+| vim | win down             | C-j, C-Down  | C-j, C-Down  |          |         |
+| --- | ---                  | ---          | ---          | ---      | ---     |
+|     | left                 | h            |              |          | Left    |
+|     | right                | l            |              |          | Right   |
+|     | up                   | k            |              |          | Up      |
+|     | down                 | j            |              |          | Down    |
+| --- | ---                  | ---          | ---          | ---      | ---     |
+|     | page up              | C-d          |              |          | PgUp    |
+|     | page down            | C-f          |              |          | PgDn    |
+|     | page up 5            | C-p          |              |          |         |
+|     | page down 5          | C-n          |              |          |         |
+|     | up                   | k            |              | C-k, C-p |         |
+|     | down                 | j            |              | C-j, C-n |         |
+| --- | ---                  | ---          | ---          | ---      | ---     |
+| rl  | Home                 |              | C-a          | C-a      | Home    |
+| rl  | End                  |              | C-e          | C-e      | End     |
+| rl  | Left                 |              | C-b          | C-b      | Left    |
+| rl  | Right                |              | C-f          | C-f      | Right   |
+| rl  | BS                   |              | C-s          | C-s      | BS      |
+| rl  | Del                  |              | C-d          | C-d      | Del     |
+| rl  | delete before cursor |              | C-u          | C-u      |         |
+| rl  | delete after cursor  |              | C-k          | C-k      |         |
+| --- | ---                  | ---          | ---          | ---      | ---     |
+|     | select before cursor |              |              |          | S-Home  |
+|     | select after cursor  |              |              |          | S-End   |
+|     | select all           |              |              |          | C-a     |
+| --- | ---                  | ---          | ---          | ---      | ---     |
+|     | redraw               | C-g          | C-g          | C-g      | F5      |
 
 ## HHKB 60 Keys
 
